fixed_overflowing_issue

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 /*Your Custom CSS Goes here*/
+.text-gray-800{
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 .gradient {
   background: linear-gradient(90deg, #00007F 0%, #0086D6 100%);
 }
@@ -17,7 +21,6 @@
 .faq-accordion:first-child {
   @apply border-t-2 border-gray-100;
 }
-
 /*Core CSS*/
 @layer base {
   h1 {
